modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- 图标 -->
     <link rel="shortcut icon" href="assets/images/logo.png">
 
+    <!-- 添加图标库 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -105,6 +108,28 @@
             <h4 class="m-auto" style="letter-spacing: 0px;">展望</h4>
         </div>
     </div>
+
+
+    <!-- 侧边栏区域 移动端为底栏-->
+    <div class="desktop-content">
+        <div class="icon-bar">
+            <a class="active" href="#"><i class="fa fa-home"></i></a>
+            <a class="icon-bar-margin" href="#"><i class="fa fa-search"></i></a>
+            <a class="icon-bar-margin" href="#"><i class="fa fa-envelope"></i></a>
+            <a class="icon-bar-margin" href="#"><i class="fa fa-globe"></i></a>
+            <a href="#"><i class="fa fa-trash"></i></a>
+        </div>
+    </div>
+    <div class="mobile-content">
+        <div class="icon-bar-mobile">
+            <a class="active" href="#"><i class="fa fa-home"></i></a>
+            <a href="#"><i class="fa fa-search"></i></a>
+            <a href="#"><i class="fa fa-envelope"></i></a>
+            <a href="#"><i class="fa fa-globe"></i></a>
+            <a href="#"><i class="fa fa-trash"></i></a>
+        </div>
+    </div>
+
 
 
     <!-- 标题区域 -->
@@ -578,42 +603,42 @@
             <!-- 正文 -->
             <div class="col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 data-aos-duration="1100">
-                    <!-- 电脑端内容 -->
-                    <div class="desktop-content">
-                        <p class="m-auto line-height-3">
-                            随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
-                            在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
-                            在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
-                            同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
-                            例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
-                            在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
-                        </p>
-                        <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto line-height-3">
-                            在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
-                            通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
-                            其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
-                            中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
-                        </p>
-                    </div>
-                    <!-- 移动端内容 -->
-                    <div class="mobile-content">
-                        <p class="m-auto line-height-3">
-                            随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
-                            在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
-                            在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
-                            同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
-                            例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
-                            在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
-                        </p>
-                        <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto line-height-3">
-                            在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
-                            通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
-                            其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
-                            中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
-                        </p>
-                    </div>
+                <!-- 电脑端内容 -->
+                <div class="desktop-content">
+                    <p class="m-auto line-height-3">
+                        随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
+                        在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
+                        在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
+                        同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
+                        例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
+                        在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
+                    </p>
+                    <span class="d-flex justify-content-center"></span>
+                    <p class="m-auto line-height-3">
+                        在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
+                        通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
+                        其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
+                        中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
+                    </p>
+                </div>
+                <!-- 移动端内容 -->
+                <div class="mobile-content">
+                    <p class="m-auto line-height-3">
+                        随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
+                        在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
+                        在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
+                        同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
+                        例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
+                        在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
+                    </p>
+                    <span class="d-flex justify-content-center"></span>
+                    <p class="m-auto line-height-3">
+                        在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
+                        通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
+                        其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
+                        中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
+                    </p>
+                </div>
             </div>
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
         </div>
