modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <!-- 第一章 -->
     <div class="section" id="chapter-1">
-        <div class="container container-padding-top">
+        <div class="container container-padding-top-first">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                     <div class="section-title text-center" style="padding-bottom: 0px;">
