modified:   index.html

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
     </div>
 
     <!-- 底部 -->
-    <div class="section section-margin-bottom" id="about">
+    <div class="section" style="padding-bottom: 72px;" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
