--- a/index_pt.html
+++ b/index_pt.html
@@ -286,7 +286,7 @@
                     <div class="row">
                         <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                             <div class="section-title text-center">
-                                <div id="capitulo-2-titulo"> <!-- Título do Capítulo 2 -->
+                                <div id="chapter-2-title"> <!-- Título do Capítulo 2 -->
                                     <h2 class="title">Capítulo 2</h2>
                                     <h3 class="m-auto">Estudantes Estrangeiros na China e Adaptação Cultural</h3>
                                 </div>
