modified:   nuclear.html

--- a/nuclear.html
+++ b/nuclear.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>“跨界”使者：跨文化视野下的在华留学生调查</title>
+    <title>太平洋里核难平</title>
 
 
     <!-- 图标 -->
@@ -70,11 +70,11 @@
     <!-- 导航栏区域 -->
     <div id="chaper-1-header" class="text-center header shadow-box hidden">
         <div class="desktop-content">
-            <h4 class="m-auto">前言 | 在华留学生：文化的“跨界”使者</h4>
+            <h4 class="m-auto">前言 | 太平洋里核难平</h4>
         </div>
         <div class="mobile-content">
             <h3 class="title">前言</h3>
-            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生：文化的“跨界”使者</h4>
+            <h4 class="m-auto" style="letter-spacing: 0px;">太平洋里核难平</h4>
         </div>
 
     </div>
@@ -137,17 +137,17 @@
         <!-- 大于768px 显示-->
         <div class="desktop-content">
             <div class="header-text" data-aos="fade-up" data-aos-duration="1100">
-                <span class="title-desktop-large">“跨界”使者</span>
+                <span class="title-desktop-large">太平洋里核难平</span>
                 <p></p>
-                <span class="title-desktop">跨文化视野下的在华留学生调查</span>
+                <span class="title-desktop">日本排核舆情回顾</span>
             </div>
         </div>
         <!-- 小于等于768px 显示-->
         <div class="mobile-content">
             <div class="header-text-mobile" data-aos="fade-right" data-aos-duration="500">
-                <span class="title-mobile-large">“跨界”使者</span>
+                <span class="title-mobile-large">太平洋里核难平</span>
                 <p></p>
-                <span class="title-mobile">跨文化视野下的在华留学生调查</span>
+                <span class="title-mobile">日本排核舆情回顾</span>
             </div>
         </div>
     </div>
@@ -163,11 +163,11 @@
                         <div id="chapter-1-title"> <!-- 第一章标题（移动端换行）-->
                             <div class="desktop-content">
                                 <h2 class="m-auto">前言</h2>
-                                <h3 class="m-auto">在华留学生：文化的“跨界”使者</h3>
+                                <h3 class="m-auto">核污水舆情调查</h3>
                             </div>
                             <div class="mobile-content">
                                 <h2 class="m-auto">前言</h2>
-                                <h3 class="m-auto">在华留学生：<br>文化的“跨界”使者</h3>
+                                <h3 class="m-auto">核污水舆情调查</h3>
                             </div>
                         </div>
                         <span class="d-flex justify-content-center"></span>
