new file:   .DS_Store 	modified:   index.html 	deleted:    nuclear.html 	modified:   style.css 	new file:   "\345\276\256\345\215\232\347\224\250\346\210\267_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html" 	new file:   "\347\237\245\344\271\216_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html"

--- a/index.html
+++ b/index.html
@@ -228,7 +228,10 @@
                             </p>
                         </div>
                     </div>
+                    <!-- 条形图 -->
                     <div class="chart-center" id="chart_div"></div>
+                    <!-- Plotly环形图测试 -->
+                    <div class="chart-center">
                     <div class="section-title text-center">
                         <p class="m-auto line-height-3">
                             我国一直以来都欢迎世界各地的留学生来华学习，我们对留学生提供了一系列的优惠政策，包括奖学金、简化签证手续、扩大就业范围等。随着我国国际地位的不断提高，来华留学生的数量也在逐年增加。在华留学生在享受我国提供的便利的同时，也需要适应我国的文化和生活方式，这是一个双向的过程，也是世界了解我国的一个重要途径。
@@ -643,6 +646,7 @@
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
         </div>
     </div>
+
 
     <!-- 底部 -->
     <div class="section" style="padding-bottom: 72px;" id="about">
