--- a/index.html
+++ b/index.html
@@ -669,6 +669,7 @@
                             <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
                             <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
                             <p class="m-auto line-height-3">网站制作：谢建双</p>
+                            <p class="m-auto line-height-3">数据来源：</p>
                         </div>
                     </div>
                 </div>
