modified:   index.html

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
     <div class="desktop-content">
         <div class="icon-bar">
             <a href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>  <!--页面顶部移动到顶部-->
-            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span class="material-symbols-outlined">monitoring</span></a>  <!--页面顶部移动到chapter-1-header-->
-            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')"><span class="material-symbols-outlined">join_right</span></a>  <!--页面顶部移动到chapter-2-header-->
-            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')"><span class="material-symbols-outlined">diversity_2</span></a>  <!--页面顶部移动到chapter-3-header-->
-            <a id="chapter-4-button" onclick="scrollToElement('chapter-4')"><span class="material-symbols-outlined">workspaces</span></a>  <!--页面顶部移动到chapter-4-header-->
+            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1-title')"><span class="material-symbols-outlined">monitoring</span></a>  <!--页面顶部移动到chapter-1-header-->
+            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2-title')"><span class="material-symbols-outlined">join_right</span></a>  <!--页面顶部移动到chapter-2-header-->
+            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3-title')"><span class="material-symbols-outlined">diversity_2</span></a>  <!--页面顶部移动到chapter-3-header-->
+            <a id="chapter-4-button" onclick="scrollToElement('chapter-4-title')"><span class="material-symbols-outlined">workspaces</span></a>  <!--页面顶部移动到chapter-4-header-->
         </div>
     </div>
     <div class="mobile-content">
         <div class="icon-bar-mobile">
             <a class="icon-bar-margin" href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>  <!--页面顶部移动到顶部-->
-            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span class="material-symbols-outlined">monitoring</span></a>  <!--页面顶部移动到chapter-1-header-->
-            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')"><span class="material-symbols-outlined">join_right</span></a>  <!--页面顶部移动到chapter-2-header-->
-            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')"><span class="material-symbols-outlined">diversity_2</span></a>  <!--页面顶部移动到chapter-3-header-->
-            <a class="icon-bar-margin" id="chapter-4-button" onclick="scrollToElement('chapter-4')"><span class="material-symbols-outlined">workspaces</span></a>  <!--页面顶部移动到chapter-4-header-->
+            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1-title')"><span class="material-symbols-outlined">monitoring</span></a>  <!--页面顶部移动到chapter-1-header-->
+            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2-title')"><span class="material-symbols-outlined">join_right</span></a>  <!--页面顶部移动到chapter-2-header-->
+            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3-title')"><span class="material-symbols-outlined">diversity_2</span></a>  <!--页面顶部移动到chapter-3-header-->
+            <a class="icon-bar-margin" id="chapter-4-button" onclick="scrollToElement('chapter-4-title')"><span class="material-symbols-outlined">workspaces</span></a>  <!--页面顶部移动到chapter-4-header-->
         </div>
     </div>
 
