modified:   assets/js/main.min.js 	modified:   index.html 	modified:   index_en.html 	modified:   index_es.html 	modified:   index_pt.html 	new file:   main.js 	modified:   style.css 	modified:   style_new.css

--- a/index_en.html
+++ b/index_en.html
@@ -68,6 +68,17 @@
 
 <body>
 
+    <header>
+        <div class="language-selector">
+          <select id="language">
+            <option value="en">English</option>
+            <option value="zh">中文</option>
+            <option value="es">Español</option>
+            <option value="pt">Português</option>
+          </select>
+        </div>
+    </header>
+
     <!-- 导航栏区域 -->
     <div id="chaper-1-header" class="text-center header shadow-box hidden">
         <div class="desktop-content">
@@ -879,6 +890,7 @@
 <script src="assets/js/plugins.min.js"></script>
 <!--Main JS-->
 <script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 
 <!-- 电脑/移动端元素切换-->
 <script>
