--- a/index_pt.html
+++ b/index_pt.html
@@ -67,6 +67,17 @@
 
 <body>
 
+    <header>
+        <div class="language-selector">
+          <select id="language">
+            <option value="pt">Português</option>
+            <option value="zh">中文</option>
+            <option value="en">English</option>
+            <option value="es">Español</option>
+          </select>
+        </div>
+    </header>
+
     <!-- Área da barra de navegação -->
     <div id="chaper-1-header" class="text-center header shadow-box hidden">
         <div class="desktop-content">
@@ -866,6 +877,7 @@
 <script src="assets/js/plugins.min.js"></script>
 <!--Main JS-->
 <script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 
 <!-- 电脑/移动端元素切换-->
 <script>
