modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <!-- 这里需要一张图表 -->
                             <div class="chart-center" id="chart_2"></div>
                             <!-- 分栏图表 -->
-                            <div class="row">
+                            <div class="row mx-4">
                                 <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                     <div class="chart-col-md6 single-gallery">
                                         <div class="chart-md6 gallery-thumb" id="4e3788a5-2875-40dd-88a8-a5e45b5d19c8"
@@ -521,8 +521,8 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1800">
-                                    <div class="row gallery-filter-wrapper m-b-n50">
-                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item item2 item3 item4">
+                                    <div class="row gallery-filter-wrapper m-b-n50 mx-4">
+                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                             <!-- Single Gallery Start -->
                                             <div class="single-gallery">
                                                 <div class="gallery-thumb">
@@ -531,7 +531,7 @@
                                             </div>
                                             <!-- Single Gallery End -->
                                         </div>
-                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item item1 item3">
+                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                             <!-- Single Gallery Start -->
                                             <div class="single-gallery">
                                                 <div class="gallery-thumb">
@@ -540,7 +540,7 @@
                                             </div>
                                             <!-- Single Gallery End -->
                                         </div>
-                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item item1 item3">
+                                        <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                             <!-- Single Gallery Start -->
                                             <div class="single-gallery">
                                                 <div class="gallery-thumb">
