modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1800">
-                                    <div class="row gallery-filter-wrapper m-b-n50 mx-4">
+                                    <div class="row gallery-filter-wrapper m-b-n50">
                                         <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                             <!-- Single Gallery Start -->
                                             <div class="single-gallery">
