--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <link rel="shortcut icon" href="assets/images/logo.png">
 
     <!-- 添加图标库 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_new.css" />
-
+    <link rel="stylesheet" href="style_present.css" />
     <!-- 模板CSS -->
     <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
     <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
@@ -86,7 +84,7 @@
 
 
     <!-- 侧边栏区域 移动端为底栏-->
-    <div class="desktop-content">
+    <div class="desktop-content" style="display: none;">
         <div class="icon-bar">
             <a href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>
             <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span
@@ -99,7 +97,7 @@
                     class="material-symbols-outlined">workspaces</span></a>
         </div>
     </div>
-    <div class="mobile-content">
+    <div class="mobile-content" style="display: none;">
         <div class="icon-bar-mobile">
             <a class="icon-bar-margin" href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>
             <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span
@@ -145,12 +143,14 @@
                     <div class="section-title text-center" style="padding-bottom: 0px;">
                         <div id="chapter-1-title"> <!-- 第一章标题（移动端换行）-->
                             <div class="desktop-content">
-                                <h2 class="title text-gradient-2">前言</h2>
-                                <h3 class="m-auto text-gradient-2">在华留学生：文化的“跨界”使者</h3>
+                                <h2 class="title text-gradient-3">前言</h2>
+                                <p></p>
+                                <h3 class="m-auto text-gradient-3">在华留学生：文化的“跨界”使者</h3>
                             </div>
                             <div class="mobile-content">
-                                <h2 class="title text-gradient-2">前言</h2>
-                                <h3 class="m-auto text-gradient-2">在华留学生：<br>文化的“跨界”使者</h3>
+                                <h2 class="title text-gradient-3">前言</h2>
+                                <p></p>
+                                <h3 class="m-auto text-gradient-3">在华留学生：<br>文化的“跨界”使者</h3>
                             </div>
                         </div>
                         <span class="d-flex justify-content-center"></span>
@@ -239,10 +239,10 @@
                             <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                                 <div class="section-title text-center">
                                     <div id="chapter-2-title"> <!-- 第二章标题 -->
-                                        <h2 class="title text-gradient-2">第二章</h2>
-                                        <h3 class="m-auto text-gradient-2">在华留学生与文化适应</h3>
+                                        <h2 class="title text-gradient-3">第二章</h2>
+                                        <p></p>
+                                        <h3 class="m-auto text-gradient-3">在华留学生与文化适应</h3>
                                     </div>
-
                                     <span class="d-flex justify-content-center"></span>
                                     <p class="m-auto  line-height-3">
                                         文化适应指个体在进入一个新的文化环境后，通过学习和调整，逐渐适应新的文化规范和价值观，从而减少文化冲突和压力，提高生活和工作的满意度和效率的过程。文化适应是一个复杂而动态的过程，受到个体和环境的多种因素的影响。在华留学生作为跨文化者，他们在中国所经历的文化适应过程也因个体与环境的多重因素而变得复杂而动态。
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <!-- 正文 -->
-            <div style="background-color: #F2F6FA;">
+            <div style="background-color: var(--color-light-blue);">
                 <div class="container">
                     <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                         <div class="section-title text-center">
@@ -485,8 +485,9 @@
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                     <div class="section-title text-center" style="padding-bottom: 0px;">
                         <div id="chapter-3-title"> <!-- 第三章标题 -->
-                            <h2 class="title text-gradient-2">第三章</h2>
-                            <h3 class="m-auto text-gradient-2">在华留学生与文化交际</h3>
+                            <h2 class="title text-gradient-3">第三章</h2>
+                            <p></p>
+                            <h3 class="m-auto text-gradient-3">在华留学生与文化交际</h3>
                         </div>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">
@@ -602,15 +603,16 @@
 
 
         <!-- 第四章 -->
-        <div class="section section-margin-bottom" id="chapter-4" style="background-color: #F2F6FA;">
+        <div class="section section-margin-bottom" id="chapter-4" style="background-color: var(--color-light-blue);">
             <div class="container container-padding-top">
                 <div class="row">
                     <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
                         data-aos-duration="1100">
                         <div class="section-title text-center" style="padding-bottom: 0px;">
                             <div id="chapter-4-title"> <!-- 第四章标题 -->
-                                <h2 class="title text-gradient-2">第四章</h2>
-                                <h3 class="m-auto text-gradient-2">展望</h3>
+                                <h2 class="title text-gradient-3">第四章</h2>
+                                <p></p>
+                                <h3 class="m-auto text-gradient-3">展望</h3>
                                 <span class="d-flex justify-content-center"></span>
                             </div>
                         </div>
