modified:   assets/css/style.min.css 	modified:   assets/css/vendor/vendor.min.css 	modified:   dc-studyinchina.io.code-workspace 	modified:   index.html 	modified:   index_en.html 	modified:   index_es.html 	modified:   index_pt.html 	modified:   style.css 	deleted:    style_present.css 	new file:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_present.css" />
+    <link rel="stylesheet" href="style_preset.css" />
     <!-- 模板CSS -->
     <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
     <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
@@ -43,11 +43,11 @@
     <!-- 导航栏区域 -->
     <div id="chapter-1-header" class="text-center header shadow-box hidden">
         <div class="desktop-content">
-            <h4 class="m-auto">前言 | 在华留学生：文化的“跨界”使者</h4>
+            <h4 class="m-auto">在华留学生：文化的“跨界”使者</h4>
         </div>
         <div class="mobile-content">
             <h3 class="title">前言</h3>
-            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生：文化的“跨界”使者</h4>
+            <h4 class="secondary-header">在华留学生：文化的“跨界”使者</h4>
         </div>
 
     </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第二章</h3>
-            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生与文化适应</h4>
+            <h4 class="secondary-header">在华留学生与文化适应</h4>
         </div>
     </div>
 
@@ -68,7 +68,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第三章</h3>
-            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生与文化交际</h4>
+            <h4 class="secondary-header">在华留学生与文化交际</h4>
         </div>
     </div>
 
@@ -78,7 +78,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第四章</h3>
-            <h4 class="m-auto" style="letter-spacing: 0px;">展望</h4>
+            <h4 class="secondary-header">展望</h4>
         </div>
     </div>
 
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div id="chapter-1-bottom"></div> <!-- 底部 -->
-                <div class="bottom-padding"></div>
+                <div class="padding-bottom"></div>
             </div>
         </div>
 
@@ -305,7 +305,7 @@
                             <!-- 这里需要一张图表 -->
                             <div class="chart-center" id="chart_2"></div>
                             <!-- 分栏图表 -->
-                            <div class="row mx-4">
+                            <div class="row mx-4-fit-fit">
                                 <div class="col-md-6 col-lg-4 m-b-50 filter-item">
                                     <div class="chart-col-md6 single-gallery">
                                         <div class="chart-md6 gallery-thumb" id="4e3788a5-2875-40dd-88a8-a5e45b5d19c8"
@@ -474,7 +474,7 @@
                     </div>
                 </div>
                 <div id="chapter-2-bottom"></div> <!-- 底部 -->
-                <div class="bottom-padding"></div>
+                <div class="padding-bottom"></div>
             </div>
         </div>
 
@@ -597,7 +597,7 @@
                     </div>
                 </div>
                 <div id="chapter-3-bottom"></div> <!-- 底部 -->
-                <div class="bottom-padding"></div>
+                <div class="padding-bottom"></div>
             </div>
         </div>
 
@@ -659,7 +659,7 @@
                     </div>
                 </div>
                 <div id="chapter-4-bottom"></div> <!-- 底部 -->
-                <div class="bottom-padding"></div>
+                <div class="padding-bottom"></div>
             </div>
         </div>
 
