--- a/index_pt.html
+++ b/index_pt.html
@@ -16,6 +16,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_preset.css" />
 
     <!-- 模板CSS -->
     <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
