--- a/index_es.html
+++ b/index_es.html
@@ -17,6 +17,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_preset.css" />
 
     <!-- 模板CSS -->
     <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
