modified:   assets/css/style.min.css 	modified:   assets/css/vendor/vendor.min.css 	modified:   style_preset.css 	modified:   treemap-sunburst-transition.html

--- a/treemap-sunburst-transition.html
+++ b/treemap-sunburst-transition.html
@@ -1,15 +1,11 @@
-<!--
-	THIS EXAMPLE WAS DOWNLOADED FROM https://echarts.apache.org/examples/en/editor.html?c=treemap-sunburst-transition&lang=js
--->
 <!DOCTYPE html>
-<html lang="en" style="height: 100%">
-
-<!-- CSS -->
-<link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="style_present.css" />
+<html lang="zh-cn">
 
 <head>
   <meta charset="utf-8">
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style_preset.css" />
 </head>
 
 <body style="height: 100%; margin: 0">
