new file:   area-stack-gradient.html 	new file:   data/continent-2022-treemap-sunburst.js 	renamed:    continent-2017.json -> data/continent-2022.json 	modified:   index.html 	modified:   style.css 	modified:   style_preset.css 	modified:   treemap-sunburst-transition.html

--- a/index.html
+++ b/index.html
@@ -86,28 +86,50 @@
     <!-- 侧边栏区域 移动端为底栏-->
     <div class="desktop-content" style="display: none;">
         <div class="icon-bar">
-            <a href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>
-            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span
-                    class="material-symbols-outlined">monitoring</span></a>
-            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')"><span
-                    class="material-symbols-outlined">join_right</span></a>
-            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')"><span
-                    class="material-symbols-outlined">diversity_2</span></a>
-            <a id="chapter-4-button" onclick="scrollToElement('chapter-4')"><span
-                    class="material-symbols-outlined">workspaces</span></a>
+            <a href="#" class="top-icon" id="home-button">
+                <span class="material-symbols-outlined">home</span>
+                <div class="icon-text">首页</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')">
+                <span class="material-symbols-outlined">monitoring</span>
+                <div class="icon-text">前言</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')">
+                <span class="material-symbols-outlined">join_right</span>
+                <div class="icon-text">第二章</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')">
+                <span class="material-symbols-outlined">diversity_2</span>
+                <div class="icon-text">第三章</div>
+            </a>
+            <a class="bottom-icon" id="chapter-4-button" onclick="scrollToElement('chapter-4')">
+                <span class="material-symbols-outlined">workspaces</span>
+                <div class="icon-text">展望</div>
+            </a>
         </div>
     </div>
     <div class="mobile-content" style="display: none;">
         <div class="icon-bar-mobile">
-            <a class="icon-bar-margin" href="#" id="home-button"><span class="material-symbols-outlined">home</span></a>
-            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')"><span
-                    class="material-symbols-outlined">monitoring</span></a>
-            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')"><span
-                    class="material-symbols-outlined">join_right</span></a>
-            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')"><span
-                    class="material-symbols-outlined">diversity_2</span></a>
-            <a class="icon-bar-margin" id="chapter-4-button" onclick="scrollToElement('chapter-4')"><span
-                    class="material-symbols-outlined">workspaces</span></a>
+            <a class="icon-bar-margin" href="#" id="home-button">
+                <span class="material-symbols-outlined">home</span>
+                <div class="icon-text">首页</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')">
+                <span class="material-symbols-outlined">monitoring</span>
+                <div class="icon-text">前言</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')">
+                <span class="material-symbols-outlined">join_right</span>
+                <div class="icon-text">第二章</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-3-button" onclick="scrollToElement('chapter-3')">
+                <span class="material-symbols-outlined">diversity_2</span>
+                <div class="icon-text">第三章</div>
+            </a>
+            <a class="icon-bar-margin" id="chapter-4-button" onclick="scrollToElement('chapter-4')">
+                <span class="material-symbols-outlined">workspaces</span>
+                <div class="icon-text">展望</div>
+            </a>
         </div>
     </div>
 
